@@ -41,6 +41,10 @@ sonarqube {
     property "sonar.host.url", "https://sonarcloud.io"
     property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/testCodeCoverageReport/testCodeCoverageReport.xml"
     property "sonar.coverage.exclusions", "acceptance-tests/**/*"
+    // Exclude OptionalUsedAsFieldOrParameterType rule - common pattern in Besu codebase
+    property "sonar.issue.ignore.multicriteria", "e1"
+    property "sonar.issue.ignore.multicriteria.e1.ruleKey", "java:S3553"
+    property "sonar.issue.ignore.multicriteria.e1.resourceKey", "**/*.java"
   }
 }
 
@@ -78,6 +82,14 @@ def _intCmdArg(name, defaultValue) {
 
 def _intCmdArg(name) {
   return _intCmdArg(name, null)
+}
+
+def _strCmdArg(name, defaultValue) {
+  return project.hasProperty(name) ? project.property(name) as String : defaultValue
+}
+
+def _strCmdArg(name) {
+  return _strCmdArg(name, null)
 }
 
 def _strListCmdArg(name, defaultValue) {
@@ -620,27 +632,42 @@ subprojects {
 
   if (file('src/jmh').directory) {
     apply plugin: 'me.champeau.jmh'
+    tasks.named("jmh") {
+      description = "Usage: gradle jmh -Pf=2 -Pwi=3 -Pi=5 -Pincludes=MyBench -PasyncProfiler=<libPath> -PasyncProfilerOptions=<options>\n" +
+        "\nRun JMH benchmarks in each of the projects. Allows for controlling JMH execution directly from the command line.\n" +
+        "\t-Pf=<forks>\tHow many times to fork a single benchmark. Use 0 to disable forking altogether. Defaults to 2 forks.\n" +
+        "\t-Pwf=<warmupForks>\tHow many warmup forks to make for a single benchmark. 0 to disable warmup forks. Defaults to 0 forks.\n" +
+        "\t-Pwi=<warmupIterations>\tNumber of warmup iterations to do. Defaults to 1 iteration.\n" +
+        "\t-Pi=<iterations>\tNumber of measurement iterations to do. Defaults to 10 iterations.\n" +
+        "\t-Pbm=<benchmarkMode>\tBenchmark mode. Available modes are: [Throughput/thrpt, AverageTime/avgt, SampleTime/sample, SingleShotTime/ss, All/all]. Defaults to `avgt`.\n" +
+        "\t-Pincludes=<includePattern>\tInclude pattern (regular expression) for benchmarks to be executed. Defaults to including all benchmarks.\n" +
+        "\t-PasyncProfiler=<libPath>\tLibrary path to fetch the Async profiler from. Default is to disable profiling.\n" +
+        "\t-PasyncProfilerOptions=<asyncProfilerOptions>\tOptions to pass on to the Async profiler separated by ';'. Default is to produce a flamegraph with all other default profiler options.\n"
+    }
 
     jmh {
-      // Allows to control JMH execution directly from the command line. I typical execution may look
-      // like:
-      //    gradle jmh -Pf=2 -Pwi=3 -Pi=5 -Pinclude=MyBench
-      // which will run 2 forks with 3 warmup iterations and 5 normal ones for each, and will only
-      // run the benchmark matching 'MyBench' (a regexp).
-      warmupForks = _intCmdArg('wf')
-      warmupIterations = _intCmdArg('wi')
-      fork = _intCmdArg('f')
-      iterations = _intCmdArg('i')
-      benchmarkMode = _strListCmdArg('bm')
-      includes = _strListCmdArg('include', [''])
-      humanOutputFile = project.file("${project.buildDir}/reports/jmh/results.txt")
-      resultFormat = 'JSON'
+      jmhVersion = '1.37'
+      warmupForks = _intCmdArg('wf', 0)
+      warmupIterations = _intCmdArg('wi', 1)
+      fork = _intCmdArg('f', 2)
+      iterations = _intCmdArg('i', 10)
+      benchmarkMode = _strListCmdArg('bm', ['avgt'])
+      includes = _strListCmdArg('includes', [''])
+      var asyncProfiler = _strCmdArg('asyncProfiler')
+      var asyncProfilerOptions = _strCmdArg('asyncProfilerOptions', 'output=flamegraph')
+      if (asyncProfiler != null) {
+        profilers = [
+          'async:libPath=' + asyncProfiler + ';' + asyncProfilerOptions
+        ]
+      }
       duplicateClassesStrategy = DuplicatesStrategy.WARN
+      jvmArgs = [
+        '-XX:+EnableDynamicAgentLoading'
+      ]
     }
 
     dependencies {
       jmhAnnotationProcessor(platform(project(':platform')))
-      jmh 'org.slf4j:slf4j-api'
     }
   }
 
@@ -800,9 +827,9 @@ artifactoryPublish {
   dependsOn distZip
 }
 
-def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
-def dockerOrgName = project.hasProperty('dockerOrgName') ? project.getProperty("dockerOrgName") : "hyperledger"
-def dockerArtifactName = project.hasProperty("dockerArtifactName") ? project.getProperty("dockerArtifactName") : "besu"
+def dockerBuildVersion = project.hasProperty('release.releaseVersion') && project.property('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
+def dockerOrgName = project.hasProperty('dockerOrgName') && project.property('dockerOrgName') && project.property('dockerOrgName').trim() != '/' ? project.getProperty("dockerOrgName").trim() : "hyperledger"
+def dockerArtifactName = project.hasProperty("dockerArtifactName") && project.property("dockerArtifactName")?.trim() ? project.getProperty("dockerArtifactName").trim() : "besu"
 def dockerImageName = "${dockerOrgName}/${dockerArtifactName}"
 
 // rename the top level dir from besu-<version> to besu and this makes it really
@@ -838,6 +865,13 @@ task distDocker {
     }
     exec {
       def image = "${dockerImageName}:${dockerBuildVersion}"
+
+      println "Docker Build Version: $dockerBuildVersion"
+      println "Docker Organization Name: $dockerOrgName"
+      println "Docker Artifact Name: $dockerArtifactName"
+      println "Docker Image Name: $dockerImageName"
+      println "Building docker image name ${image}"
+
       def dockerPlatform = ""
       if (project.hasProperty('docker-platform')){
         dockerPlatform = "--platform ${project.getProperty('docker-platform')}"
